// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Tag
    classes={
      Object {
        "default": "default",
        "defaultIcon": "defaultIcon",
        "error": "error",
        "errorIcon": "errorIcon",
        "icon": "icon",
        "info": "info",
        "infoIcon": "infoIcon",
        "link": "link",
        "linkIcon": "linkIcon",
        "success": "success",
        "successIcon": "successIcon",
        "tag": "tag",
        "tagText": "tagText",
        "warning": "warning",
        "warningIcon": "warningIcon",
      }
    }
    theme="default"
  >
    Tag
  </Tag>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        <span
          className="tagText"
        >
          Tag
        </span>,
      ],
      "className": "tag default ",
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Tag",
          "className": "tagText",
        },
        "ref": null,
        "rendered": "Tag",
        "type": "span",
      },
    ],
    "type": "label",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          <span
            className="tagText"
          >
            Tag
          </span>,
        ],
        "className": "tag default ",
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Tag",
            "className": "tagText",
          },
          "ref": null,
          "rendered": "Tag",
          "type": "span",
        },
      ],
      "type": "label",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Tag styles matches the snapshot 1`] = `
Object {
  "default": Object {
    "background": "#f5f5f5",
    "color": "#222222",
  },
  "defaultIcon": Object {
    "background": [Function],
  },
  "error": Object {
    "background": "rgba(219, 55, 55, 0.1)",
    "color": "#db3737",
  },
  "errorIcon": Object {
    "background": [Function],
  },
  "icon": Object {
    "backgroundRepeat": "no-repeat",
    "content": "\\"\\"",
    "display": "inline-block",
    "height": 13,
    "left": 0,
    "marginRight": 4,
    "paddingBottom": 0,
    "position": "relative",
    "top": 0,
    "width": 12,
  },
  "info": Object {
    "backgroundColor": "rgba(87, 54, 171, 0.1)",
    "color": "#5736ab",
  },
  "infoIcon": Object {
    "background": [Function],
  },
  "link": Object {
    "background": "rgba(9, 70, 203, 0.1)",
    "color": "#0946CB",
  },
  "linkIcon": Object {
    "background": [Function],
  },
  "success": Object {
    "background": "rgba(0, 149, 55, 0.1)",
    "color": "#009537",
  },
  "successIcon": Object {
    "background": [Function],
  },
  "tag": Object {
    "borderRadius": 16,
    "boxSizing": "border-box",
    "display": "inline-block",
    "height": 16,
    "lineHeight": "12px",
    "overflow": "hidden",
    "paddingBottom": 2,
    "paddingLeft": 8,
    "paddingRight": 8,
    "paddingTop": 1,
    "position": "relative",
    "textAlign": "center",
  },
  "tagText": Object {
    "boxSizing": "border-box",
    "display": "inline-block",
    "fontFamily": "'hk_grotesk', sans-serif",
    "fontSize": 10,
    "fontStretch": "normal",
    "fontStyle": "normal",
    "fontWeight": "600",
    "letterSpacing": "normal",
    "lineHeight": "13px",
    "overflow": "hidden",
    "paddingRight": [Function],
    "position": "relative",
    "textAlign": "center",
  },
  "warning": Object {
    "background": "rgba(255, 197, 73, 0.1)",
    "color": "#ffc549",
  },
  "warningIcon": Object {
    "background": [Function],
  },
}
`;

exports[`TagJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Tag)
    theme="default"
  >
    Tag
  </Jss(Tag)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": "Tag",
      "classes": Object {
        "default": "Tag-default-0-1-24 Tag-default-0-1-3",
        "defaultIcon": "Tag-defaultIcon-0-1-17 Tag-defaultIcon-0-1-10",
        "error": "Tag-error-0-1-28 Tag-error-0-1-7",
        "errorIcon": "Tag-errorIcon-0-1-21 Tag-errorIcon-0-1-14",
        "icon": "Tag-icon-0-1-30 Tag-icon-0-1-9",
        "info": "Tag-info-0-1-25 Tag-info-0-1-4",
        "infoIcon": "Tag-infoIcon-0-1-18 Tag-infoIcon-0-1-11",
        "link": "Tag-link-0-1-29 Tag-link-0-1-8",
        "linkIcon": "Tag-linkIcon-0-1-22 Tag-linkIcon-0-1-15",
        "success": "Tag-success-0-1-26 Tag-success-0-1-5",
        "successIcon": "Tag-successIcon-0-1-19 Tag-successIcon-0-1-12",
        "tag": "Tag-tag-0-1-23 Tag-tag-0-1-1",
        "tagText": "Tag-tagText-0-1-16 Tag-tagText-0-1-2",
        "warning": "Tag-warning-0-1-27 Tag-warning-0-1-6",
        "warningIcon": "Tag-warningIcon-0-1-20 Tag-warningIcon-0-1-13",
      },
      "theme": "default",
    },
    "ref": null,
    "rendered": "Tag",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": "Tag",
        "classes": Object {
          "default": "Tag-default-0-1-24 Tag-default-0-1-3",
          "defaultIcon": "Tag-defaultIcon-0-1-17 Tag-defaultIcon-0-1-10",
          "error": "Tag-error-0-1-28 Tag-error-0-1-7",
          "errorIcon": "Tag-errorIcon-0-1-21 Tag-errorIcon-0-1-14",
          "icon": "Tag-icon-0-1-30 Tag-icon-0-1-9",
          "info": "Tag-info-0-1-25 Tag-info-0-1-4",
          "infoIcon": "Tag-infoIcon-0-1-18 Tag-infoIcon-0-1-11",
          "link": "Tag-link-0-1-29 Tag-link-0-1-8",
          "linkIcon": "Tag-linkIcon-0-1-22 Tag-linkIcon-0-1-15",
          "success": "Tag-success-0-1-26 Tag-success-0-1-5",
          "successIcon": "Tag-successIcon-0-1-19 Tag-successIcon-0-1-12",
          "tag": "Tag-tag-0-1-23 Tag-tag-0-1-1",
          "tagText": "Tag-tagText-0-1-16 Tag-tagText-0-1-2",
          "warning": "Tag-warning-0-1-27 Tag-warning-0-1-6",
          "warningIcon": "Tag-warningIcon-0-1-20 Tag-warningIcon-0-1-13",
        },
        "theme": "default",
      },
      "ref": null,
      "rendered": "Tag",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
